# PluralKitRichPresence

./: README.md  fronters_to_string.py  pyproject.toml
pluralkitrichpresence/: main.py
tests/: test_pluralkitrichpresence.py
